--- a/1101-finalproject/templates/index.html
+++ b/1101-finalproject/templates/index.html
@@ -201,7 +201,7 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             
-                            P
+                            STC Certificate of Computer Applications Specialist: Spring 2023
                         </li>
                         
                             
