--- a/1101-finalproject/templates/index.html
+++ b/1101-finalproject/templates/index.html
@@ -73,7 +73,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">STC Dual Enrollment Student</h3>
                             <div class="subheading mb-3">Computer Applications</div>
-                            <p>Learned about essential business applications (such as how to use InDesign and Microsoft Word)  </p>
+                            <p>Learn </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2021 - May 2023</span></div>
                     </div>
