--- a/1101-finalproject/templates/index.html
+++ b/1101-finalproject/templates/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Camila Vargas</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="static/img/profile.jpg" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile 1 rounded-circle mx-auto mb-2" src="static/img/Profile1.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -63,19 +63,19 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Student</h3>
+                            <h3 class="mb-0">UTRGV Student</h3>
                             <div class="subheading mb-3">Computer Science</div>
-                            <p>Bring basic coding skills to the table </p>
-                        
+                            <p>Bring basic coding skills to the table </p><ul><div</ul>
+                          </div>  
                         <div class="flex-shrink-0"><span class="text-primary">August 2023 - Today</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">STC Dual Enrollment Student</h3>
                             <div class="subheading mb-3">Computer Applications</div>
-                            <p>Learn </p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2021 - May 2023</span></div>
+                            <p>Learned about essential business applications such as InDesign and Microsoft Word</p>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">August 2021 - May 2023</span></div>
                     </div>
                 </div>
             </section>
@@ -114,9 +114,8 @@
                     <div class="subheading mb-3">Social Media</div>
                     <div class="subheading mb-3">Bilingualism</div>
                     <div class="subheading mb-3">Copy Editing</div>
-                    <ul class="list-inline dev-icons">
-                        
-                    <div class="subheading mb-3">Work Ethic</div>
+                </div>   
+                    <div class="subheading mb-3"> Work Ethic</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
